search, sort table

--- a/src/assets/sass/color-palette.sass
+++ b/src/assets/sass/color-palette.sass
@@ -11,7 +11,7 @@ $white-drk2: #c6c4c4
 //header component
 $header-bg: $white
 $header-color: $grey
-$header-bg-logo: $grey
+$header-bg-logo: $white-drk
 
 //sidebar component
 $sidebar-bg: $dark-grey
