--- a/src/assets/sass/table.sass
+++ b/src/assets/sass/table.sass
@@ -1,7 +1,13 @@
 .sortBtn
     background-color: rgba(white, 0)
     background: rgba(white, 0)
+    white-space: nowrap !important
+    text-align: center !important
+    display: inline !important
     .icon
-        margin-left: 20px
+        float: right !important
+
 .addBtn
     width: 100%
+    white-space: nowrap
+    text-align: center
