--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -6,12 +6,12 @@ body {
   color: #212121;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
-  overflow-x: hidden; }
+  text-rendering: optimizeLegibility; }
 
 .wrapper {
   display: block;
-  min-height: 100%; }
+  min-height: 100%;
+  padding-top: 10px; }
 
 .overlay {
   width: 100%;
@@ -21,10 +21,10 @@ body {
   top: 0;
   left: 0;
   display: none;
-  z-index: 98;
-  overflow-y: hidden; }
+  z-index: 98; }
 
 .content {
+  top: 50px;
   min-width: 100%;
   padding-top: 5px;
   padding-right: 40px;
