--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -7,12 +7,12 @@ body {
   color: #212121;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
-  overflow-x: hidden; }
+  text-rendering: optimizeLegibility; }
 
 .wrapper {
   display: block;
-  min-height: 100%; }
+  min-height: 100%;
+  padding-top: 10px; }
 
 .overlay {
   width: 100%;
@@ -22,10 +22,10 @@ body {
   top: 0;
   left: 0;
   display: none;
-  z-index: 98;
-  overflow-y: hidden; }
+  z-index: 98; }
 
 .content {
+  top: 50px;
   min-width: 100%;
   padding-top: 5px;
   padding-right: 40px;
@@ -40,14 +40,15 @@ body {
 
 .header {
   height: 50px;
-  background-color: #f2f2f2;
   color: #333333;
   font-family: 'Roboto', sans-serif;
-  z-index: 100; }
+  z-index: 101;
+  position: fixed;
+  min-width: 100%; }
   .header .header-logo {
     max-width: 235px;
     height: 50px;
-    background-color: rgba(51, 51, 51, 0.1);
+    background-color: #e8e8e8;
     color: #339FD1;
     font-size: 28px; }
     .header .header-logo .icon {
@@ -56,11 +57,21 @@ body {
       float: right;
       color: #333333;
       cursor: pointer; }
-  .header .settings .icon {
+
+.settings {
+  float: right;
+  top: 0;
+  right: 0;
+  position: fixed;
+  background-color: #f2f2f2;
+  z-index: 100;
+  padding: 3px;
+  width: 100%; }
+  .settings .icon {
     margin: 10px;
     font-size: 24px;
     float: right; }
-  .header .settings .notif-count {
+  .settings .notif-count {
     float: right;
     margin-top: 2px;
     font-size: 12px !important;
@@ -72,20 +83,6 @@ body {
   height: auto;
   position: inherit;
   z-index: 10; }
-
-@media (min-width: 1281px) {
-  .header .header-logo {
-    max-width: 235px;
-    min-width: 235px; }
-    .header .header-logo .icon {
-      margin-right: 20px; } }
-
-@media (max-width: 1081px) {
-  .header .header-logo {
-    min-width: 235px;
-    max-width: 235px; }
-    .header .header-logo .icon {
-      margin-left: 0; } }
 
 .sidebar {
   background-color: #222222;
@@ -141,9 +138,14 @@ body {
 
 .sortBtn {
   background-color: rgba(255, 255, 255, 0);
-  background: rgba(255, 255, 255, 0); }
+  background: rgba(255, 255, 255, 0);
+  white-space: nowrap !important;
+  text-align: center !important;
+  display: inline !important; }
   .sortBtn .icon {
-    margin-left: 20px; }
+    float: right !important; }
 
 .addBtn {
-  width: 100%; }
+  width: 100%;
+  white-space: nowrap;
+  text-align: center; }
