--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -7,12 +7,11 @@ body
     -webkit-font-smoothing: antialiased
     -moz-osx-font-smoothing: grayscale
     text-rendering: optimizeLegibility
-    overflow-x: hidden
 
 .wrapper
     display: block
     min-height: 100%
-
+    padding-top: 10px
 .overlay
     width: 100%
     height: 100%
@@ -22,9 +21,9 @@ body
     left: 0
     display: none
     z-index: 98
-    overflow-y: hidden
 
 .content
+    top: 50px
     min-width: 100%
     padding-top: 5px
     padding-right: 40px
@@ -32,6 +31,7 @@ body
     transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665)
     position: relative
     width: 100%
+
 @media (max-width: 768px)
     .content
         padding: 0
