--- a/src/assets/sass/header.sass
+++ b/src/assets/sass/header.sass
@@ -1,13 +1,14 @@
 .header
     height: 50px
-    background-color: $header-bg
     color: $header-color
     font-family: 'Roboto', sans-serif
-    z-index: 100
+    z-index: 101
+    position: fixed
+    min-width: 100%
     .header-logo
         max-width: 235px
         height: 50px
-        background-color: rgba($header-bg-logo, 0.1)
+        background-color: rgba($header-bg-logo, 1)
         color: $blue
         font-size: 28px
         .icon
@@ -16,34 +17,27 @@
             float: right
             color: $grey
             cursor: pointer
-    .settings
-        .icon
-            margin: 10px
-            font-size: 24px
-            float: right
-        .notif-count
-            float: right
-            margin-top: 2px
-            font-size: 12px !important
-            margin-left: -8px
+.settings
+    float: right
+    top: 0
+    right: 0
+    position: fixed
+    background-color: $header-bg
+    z-index: 100
+    padding: 3px
+    width: 100%
+    .icon
+        margin: 10px
+        font-size: 24px
+        float: right
+    .notif-count
+        float: right
+        margin-top: 2px
+        font-size: 12px !important
+        margin-left: -8px
 .notif-content
     float: right
     width: 200px
     height: auto
     position: inherit
     z-index: 10
-@media (min-width: 1281px)
-    .header
-        .header-logo
-            max-width: 235px
-            min-width: 235px
-            .icon
-                margin-right: 20px
-
-@media (max-width: 1081px)
-    .header
-        .header-logo
-            min-width: 235px
-            max-width: 235px
-            .icon
-                margin-left: 0
