modal close button

--- a/src/assets/sass/index.sass
+++ b/src/assets/sass/index.sass
@@ -5,6 +5,7 @@
 @import './header.sass'
 @import './sidebar.sass'
 @import './table.sass'
+@import './modal.sass'
 
 
 // font-family: 'Roboto', sans-serif
