--- a/src/assets/modal.css
+++ b/src/assets/modal.css
@@ -14,8 +14,7 @@
   background-color: #fefefe;
   margin: 5% auto;
   padding: 20px;
-  border: 1px solid #888;
-  width: 80% !important; }
+  border: 1px solid #888; }
 
 .close {
   color: #aaa;
@@ -26,3 +25,7 @@
     color: black;
     text-decoration: none;
     cursor: pointer; }
+
+.modal-body {
+  max-height: calc(100vh - 212px) !important;
+  overflow-y: hidden !important; }
