--- a/src/assets/sass/modal.sass
+++ b/src/assets/sass/modal.sass
@@ -15,7 +15,6 @@
   margin: 5% auto
   padding: 20px
   border: 1px solid #888
-  width: 80% !important
 
 .close
   color: #aaa
@@ -26,3 +25,7 @@
     color: black
     text-decoration: none
     cursor: pointer
+
+.modal-body
+    max-height: calc(100vh - 212px) !important
+    overflow-y: hidden !important
