--- a/src/assets/sass/table.sass
+++ b/src/assets/sass/table.sass
@@ -11,3 +11,37 @@
     width: 100%
     white-space: nowrap
     text-align: center
+
+.entries
+    width: 200px
+
+.overflow-table
+    max-height: calc(200vh - 212px) !important
+    overflow-y: hidden !important
+// 
+// table
+//   width: auto
+//   overflow-x: auto
+// thead, tbody, tr, td, th
+//   display: block
+//
+// tr:after
+//   content: ' '
+//   display: block
+//   visibility: hidden
+//   clear: both
+//
+// thead th
+//   height: 30px
+//   /*text-align: left;
+//
+// tbody
+//   height: 900px
+//   overflow-y: auto
+//
+// thead
+//   /* fallback
+//
+// tbody td, thead th
+//   width: 100px
+//   float: left
