--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -7,12 +7,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  overflow-y: hidden; }
+  overflow: hidden; }
 
 .wrapper {
   display: block;
   min-height: 100%;
-  padding: 10px; }
+  padding: 5px; }
 
 .content {
   top: 50px;
