--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -8,12 +8,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  overflow-y: hidden; }
+  overflow: hidden; }
 
 .wrapper {
   display: block;
   min-height: 100%;
-  padding: 10px; }
+  padding: 5px; }
 
 .content {
   top: 50px;
@@ -138,6 +138,13 @@ body {
   width: 100%;
   white-space: nowrap;
   text-align: center; }
+
+.entries {
+  width: 200px; }
+
+.overflow-table {
+  max-height: calc(200vh - 212px) !important;
+  overflow-y: hidden !important; }
 
 .modal {
   display: block  !important;
