--- a/src/assets/table.css
+++ b/src/assets/table.css
@@ -11,3 +11,10 @@
   width: 100%;
   white-space: nowrap;
   text-align: center; }
+
+.entries {
+  width: 200px; }
+
+.overflow-table {
+  max-height: calc(200vh - 212px) !important;
+  overflow-y: hidden !important; }
