--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -7,7 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  overflow: hidden; }
+  overflow: auto; }
 
 .wrapper {
   display: block;
