--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -8,7 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  overflow: hidden; }
+  overflow: auto; }
 
 .wrapper {
   display: block;
